Finishing logic for experiments to run on multiple models